--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,22 +3,19 @@
 	"configurations": [
 		{
 			"name": "Launch",
-			"type": "node",
-			"request": "launch",
-			"program": "metatrader.js",
-			"stopOnEntry": false,
-			"args": [],
-			"cwd": ".",
-			"runtimeExecutable": null,
-			"runtimeArgs": [
-				"--nolazy"
-			],
-			"env": {
-				"NODE_ENV": "development"
-			},
-			"externalConsole": false,
-			"sourceMaps": false,
-			"outDir": null
+            		"type": "node",
+            		"request": "launch",
+            		"program": "novabrain.js",
+            		"stopOnEntry": false,
+            		"args": [],
+            		"cwd": ".",
+            		"runtimeExecutable": null,
+            		"runtimeArgs": ["--nolazy"],
+            		"env": {"NODE_ENV": "development"},
+            		"externalConsole": false,
+            		"preLaunchTask": "",
+            		"sourceMaps": false,
+            		"outDir": null
 		},
 		{
 			"name": "Attach",
